[sc-9036] Implement new payment page for aws

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -144,6 +144,7 @@
 	"billing.amount": "Import",
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.audit-log": "Registre d'activitat",
+	"billing.aws-account": "Compte d'AWS Marketplace",
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget": "Pressupost sota demanda",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
@@ -195,6 +196,7 @@
 	"billing.invalid_card": "No hem pogut validar la teva targeta.",
 	"billing.invalid_vat": "Si us plau, afegiu el codi del país. Ex: ESB000000N",
 	"billing.max-file-size": "Mida màxima de fitxer",
+	"billing.modify-aws-subscription": "Si vols modificar subscripció o les dades de pagament, ves al teu",
 	"billing.month": "Mes",
 	"billing.my-subscription": "La meva subscripció",
 	"billing.next-payment": "Proper pagament",
