--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -145,6 +145,7 @@
 	"billing.amount": "Amount",
 	"billing.assistance": "Please, <a href=\"{{url}}\">contact us</a> for assistance.",
 	"billing.audit-log": "Audit log",
+	"billing.aws-account": "AWS Marketplace account",
 	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
@@ -196,6 +197,7 @@
 	"billing.invalid_card": "We were unable to validate your card.",
 	"billing.invalid_vat": "Please add the country code. e.g: ESB000000N",
 	"billing.max-file-size": "Max file size",
+	"billing.modify-aws-subscription": "If you want to change your subscription tier or payment details, please go to your",
 	"billing.month": "Month",
 	"billing.my-subscription": "My subscription",
 	"billing.next-payment": "Next payment",
