--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -144,6 +144,7 @@
 	"billing.amount": "Importe",
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.audit-log": "Registro de actividad",
+	"billing.aws-account": "Cuenta de AWS Marketplace",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget": "Presupuesto bajo demanda",
 	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
@@ -195,6 +196,7 @@
 	"billing.invalid_card": "No pudimos validar tu tarjeta.",
 	"billing.invalid_vat": "Por favor agregue el código de país. Por ejemplo: ESB000000N",
 	"billing.max-file-size": "Tamaño máximo de archivo",
+	"billing.modify-aws-subscription": "Si quieres modificar tu suscripción o los detalles de pago, ve a tu",
 	"billing.month": "Mes",
 	"billing.my-subscription": "Mi suscripción",
 	"billing.next-payment": "Próximo pago",
