--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -145,6 +145,7 @@
 	"billing.amount": "Montant",
 	"billing.assistance": "Veuillez <a href=\"{{url}}\">nous contacter</a> pour obtenir de l'aide.",
 	"billing.audit-log": "Journal d'activité",
+	"billing.aws-account": "Compte AWS Marketplace",
 	"billing.billing_details": "Détails de la facturation",
 	"billing.budget": "Budget à la demande",
 	"billing.budget_description": "Pour éviter de dépenser trop en consommables mensuels, nous vous recommandons de fixer une limite économique mensuelle.<br> Le fait de ne pas définir de limite peut entraîner des frais inattendus pour toute consommation dépassant le montant alloué.",
@@ -196,6 +197,7 @@
 	"billing.invalid_card": "Nous n'avons pas pu valider votre carte.",
 	"billing.invalid_vat": "Veuillez ajouter le code du pays. par exemple : ESB000000N",
 	"billing.max-file-size": "Taille maximale du fichier",
+	"billing.modify-aws-subscription": "Si vous souhaitez modifier votre niveau d'abonnement ou vos informations de paiement, veuillez vous rendre sur votre",
 	"billing.month": "Mois",
 	"billing.my-subscription": "Mon abonnement",
 	"billing.next-payment": "Prochain paiement",
