do not allow sync if no folders selected

--- a/libs/sync/src/assets/i18n/fr.json
+++ b/libs/sync/src/assets/i18n/fr.json
@@ -31,6 +31,7 @@
 	"upload.activity.error": "Échec de la synchronisation",
 	"upload.activity.event": "Message",
 	"upload.activity.help": "Toutes les synchronisations sont déclenchées automatiquement toutes les 60 minutes.",
+	"upload.activity.no-folders": "Aucun dossier sélectionné pour l'instant. Allez dans l'onglet Dossiers pour sélectionner les dossiers que vous souhaitez synchroniser.",
 	"upload.activity.sync-now": "Synchroniser maintenant",
 	"upload.add-connector": "Ajouter un connecteur",
 	"upload.authentication.fail": "Échec de l'authentification",
