--- a/libs/sync/src/assets/i18n/es.json
+++ b/libs/sync/src/assets/i18n/es.json
@@ -31,6 +31,7 @@
 	"upload.activity.error": "Sincronización fallida",
 	"upload.activity.event": "Mensaje",
 	"upload.activity.help": "Todas las sincronizaciones se activan automáticamente cada 60 minutos.",
+	"upload.activity.no-folders": "Aún no hay carpetas seleccionadas. Vaya a la pestaña Carpetas para seleccionar las carpetas que desea sincronizar.",
 	"upload.activity.sync-now": "Sincronizar ahora",
 	"upload.add-connector": "Añadir conector",
 	"upload.authentication.fail": "Autenticación fallida",
