--- a/libs/sync/src/assets/i18n/ca.json
+++ b/libs/sync/src/assets/i18n/ca.json
@@ -15,6 +15,8 @@
 	"history.source": "Origen",
 	"history.title": "Historial de pujades",
 	"home.active-connectors": "o comproveu els vostres connectors actius a la llista de l'esquerra.",
+	"home.deprecated.message": "L'aplicació Nuclia Desktop està obsoleta. Utilitzeu el <a href=\"https://docs.nuclia.dev/docs/docs/using/sync-agent\">Nuclia Sync Agent</a>.",
+	"home.deprecated.title": "Avís de depreciació",
 	"home.new-connector": "Feu clic al botó següent per afegir un nou connector al vostre compte de Nuclia",
 	"home.welcome": "Benvingut/da",
 	"login.button": "Accedir",
