--- a/libs/sync/src/assets/i18n/en.json
+++ b/libs/sync/src/assets/i18n/en.json
@@ -15,6 +15,8 @@
 	"history.source": "Source",
 	"history.title": "Upload history",
 	"home.active-connectors": "or check your active connectors in the list on the the left.",
+	"home.deprecated.message": "The Nuclia Desktop Application is deprecated. Please use the <a href=\"https://docs.nuclia.dev/docs/docs/using/sync-agent\">Nuclia Sync Agent</a>.",
+	"home.deprecated.title": "Deprecation warning",
 	"home.new-connector": "Click the button below to add a new connector to your Nuclia account",
 	"home.welcome": "Welcome",
 	"login.button": "Log in",
