--- a/libs/sync/src/assets/i18n/fr.json
+++ b/libs/sync/src/assets/i18n/fr.json
@@ -15,6 +15,8 @@
 	"history.source": "Source",
 	"history.title": "Historique des téléchargements",
 	"home.active-connectors": "ou vérifiez vos connecteurs actifs dans la liste de gauche.",
+	"home.deprecated.message": "L'application Nuclia Desktop est obsolète. Veuillez utiliser le <a href=\"https://docs.nuclia.dev/docs/docs/using/sync-agent\">Nuclia Sync Agent</a>.",
+	"home.deprecated.title": "Avertissement de dépréciation",
 	"home.new-connector": "Cliquez sur le bouton ci-dessous pour ajouter un nouveau connecteur à votre compte Nuclia",
 	"home.welcome": "Bienvenu/e",
 	"login.button": "Se connecter",
