Ericbrehault/sc 9166/deprecate desktop app (#1378)
* do not allow sync if no folders selected

* update link to doc

* deprecation warning in desktop app

--- a/libs/sync/src/assets/i18n/ca.json
+++ b/libs/sync/src/assets/i18n/ca.json
@@ -15,6 +15,8 @@
 	"history.source": "Origen",
 	"history.title": "Historial de pujades",
 	"home.active-connectors": "o comproveu els vostres connectors actius a la llista de l'esquerra.",
+	"home.deprecated.message": "L'aplicació Nuclia Desktop està obsoleta. Utilitzeu el <a href=\"https://docs.nuclia.dev/docs/docs/using/sync-agent\">Nuclia Sync Agent</a>.",
+	"home.deprecated.title": "Avís de depreciació",
 	"home.new-connector": "Feu clic al botó següent per afegir un nou connector al vostre compte de Nuclia",
 	"home.welcome": "Benvingut/da",
 	"login.button": "Accedir",
@@ -31,6 +33,7 @@
 	"upload.activity.error": "La sincronització ha fallat",
 	"upload.activity.event": "Missatge",
 	"upload.activity.help": "Totes les sincronitzacions s'activen automàticament cada 60 minuts.",
+	"upload.activity.no-folders": "Encara no s'ha seleccionat cap carpeta. Aneu a la pestanya Carpetes per seleccionar les carpetes que voleu sincronitzar.",
 	"upload.activity.sync-now": "Sincronitza ara",
 	"upload.add-connector": "Afegir connector",
 	"upload.authentication.fail": "L'autenticació ha fallat",
