--- a/libs/sync/src/assets/i18n/en.json
+++ b/libs/sync/src/assets/i18n/en.json
@@ -15,6 +15,8 @@
 	"history.source": "Source",
 	"history.title": "Upload history",
 	"home.active-connectors": "or check your active connectors in the list on the the left.",
+	"home.deprecated.message": "The Nuclia Desktop Application is deprecated. Please use the <a href=\"https://docs.nuclia.dev/docs/docs/using/sync-agent\">Nuclia Sync Agent</a>.",
+	"home.deprecated.title": "Deprecation warning",
 	"home.new-connector": "Click the button below to add a new connector to your Nuclia account",
 	"home.welcome": "Welcome",
 	"login.button": "Log in",
@@ -31,6 +33,7 @@
 	"upload.activity.error": "Sync failed",
 	"upload.activity.event": "Message",
 	"upload.activity.help": "All syncs are triggered automatically every 60 minutes.",
+	"upload.activity.no-folders": "No folders selected yet. Go to the Folders tab to select the folders you want to sync.",
 	"upload.activity.sync-now": "Sync now",
 	"upload.add-connector": "Add connector",
 	"upload.authentication.fail": "Authentication failed",
