Unify annotate actions copy

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -764,7 +764,7 @@
 	"resource.confirm-delete.plural-title": "Esteu segur que voleu suprimir els recursos?",
 	"resource.confirm-delete.title": "Esteu segur que voleu suprimir el recurs?",
 	"resource.confirm-reprocess.description": "El processament de les dades trigarà un temps.",
-	"resource.confirm-reprocess.plural-description": "Necessitem un temps per processar les dades. Un cop reprocessats els podeu veure a la pàgina de llista de recursos disponible per editar, classificar o anotar.",
+	"resource.confirm-reprocess.plural-description": "Necessitem un temps per processar les dades. Un cop reprocessats, els podeu veure a la pàgina de llista de recursos disponible per editar, anotar-los per etiquetes o per NER.",
 	"resource.confirm-reprocess.plural-title": "Esteu segur que voleu tornar a processar els recursos?",
 	"resource.confirm-reprocess.title": "Esteu segur que voleu tornar a processar el recurs?",
 	"resource.confirm-summarize.description": "El resum resultant s'emmagatzemarà al recurs. Aquesta operació pot trigar fins a un minut, si us plau, no abandonis el dashboard fins que no s'hagi acabat.",
@@ -820,8 +820,8 @@
 	"resource.filter.clear": "Esborra filtres",
 	"resource.filter.main-type": "Tipus principals",
 	"resource.filtered-by": "Filtrat per",
-	"resource.menu.annotate": "Anotar",
-	"resource.menu.classify": "Classificar",
+	"resource.menu.annotate": "Anotar amb NER",
+	"resource.menu.classify": "Anotar amb etiquetes",
 	"resource.menu.edit": "Edita",
 	"resource.menu.label": "Més",
 	"resource.menu.summarize": "Resumir",
