--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -764,7 +764,7 @@
 	"resource.confirm-delete.plural-title": "¿Está seguro de que desea eliminar los recursos?",
 	"resource.confirm-delete.title": "¿Está seguro de que desea eliminar el recurso?",
 	"resource.confirm-reprocess.description": "Procesar los datos llevará algún tiempo.",
-	"resource.confirm-reprocess.plural-description": "Necesitamos algún tiempo para procesar los datos. Una vez reprocesados, podrá verlos en la página de la lista de recursos disponibles para editarlos, clasificarlos o anotarlos.",
+	"resource.confirm-reprocess.plural-description": "Necesitamos algo de tiempo para procesar los datos. Una vez reprocesados, puede verlos en la página de lista de recursos disponibles para editar, anotar por etiquetas o por NER.",
 	"resource.confirm-reprocess.plural-title": "¿Está seguro de que desea reprocesar los recursos?",
 	"resource.confirm-reprocess.title": "¿Está seguro de que desea volver a procesar el recurso?",
 	"resource.confirm-summarize.description": "El resumen resultante se almacenará en el recurso. Esta operación puede tardar hasta un minuto, por favor, no abandones el dashboard hasta que finalice.",
@@ -820,8 +820,8 @@
 	"resource.filter.clear": "Borrar filtros",
 	"resource.filter.main-type": "Tipos principales",
 	"resource.filtered-by": "Filtrado por",
-	"resource.menu.annotate": "Anotar",
-	"resource.menu.classify": "Clasificar",
+	"resource.menu.annotate": "Anotar con NER",
+	"resource.menu.classify": "Anotar con etiquetas",
 	"resource.menu.edit": "Editar",
 	"resource.menu.label": "Más",
 	"resource.menu.summarize": "Resumir",
