--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -765,7 +765,7 @@
 	"resource.confirm-delete.plural-title": "Are you sure you want to delete the resources?",
 	"resource.confirm-delete.title": "Are you sure you want to delete the resource?",
 	"resource.confirm-reprocess.description": "Process the data will take some time.",
-	"resource.confirm-reprocess.plural-description": "We need some time to process the data. Once reprocessed you can see them on the resource list page available for editing, classifying or annotating.",
+	"resource.confirm-reprocess.plural-description": "We need some time to process the data. Once reprocessed you can see them on the resource list page available for editing, annotating by labels or by NERs.",
 	"resource.confirm-reprocess.plural-title": "Are you sure you want to reprocess the resources?",
 	"resource.confirm-reprocess.title": "Are you sure you want to reprocess the resource?",
 	"resource.confirm-summarize.description": "The resulting summary will be stored in the resource. This operation can take up to one minute, please don't leave the dashboard until it's done.",
@@ -821,8 +821,8 @@
 	"resource.filter.clear": "Clear filters",
 	"resource.filter.main-type": "Main types",
 	"resource.filtered-by": "Filtered by",
-	"resource.menu.annotate": "Annotate",
-	"resource.menu.classify": "Classify",
+	"resource.menu.annotate": "Annotate with NERs",
+	"resource.menu.classify": "Annotate with labels",
 	"resource.menu.edit": "Edit",
 	"resource.menu.label": "More",
 	"resource.menu.summarize": "Summarize",
