--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -765,7 +765,7 @@
 	"resource.confirm-delete.plural-title": "Êtes-vous sûr de vouloir supprimer les ressources ?",
 	"resource.confirm-delete.title": "Êtes-vous sûr de vouloir supprimer la ressource ?",
 	"resource.confirm-reprocess.description": "Traiter les données prendra un certain temps.",
-	"resource.confirm-reprocess.plural-description": "Nous avons besoin d'un certain temps pour traiter les données. Une fois retraitées, vous pourrez les voir sur la page de la liste des ressources et les éditer, les classer ou les annoter.",
+	"resource.confirm-reprocess.plural-description": "Nous avons besoin de temps pour traiter les données. Une fois retraités, vous pouvez les voir sur la page de liste des ressources disponibles pour édition, annotation par étiquettes ou par NER.",
 	"resource.confirm-reprocess.plural-title": "Êtes-vous sûr de vouloir retraiter les ressources ?",
 	"resource.confirm-reprocess.title": "Êtes-vous sûr de vouloir retraiter la ressource ?",
 	"resource.confirm-summarize.description": "Le résumé résultant sera stocké dans la ressource. Cette opération peut prendre jusqu'à une minute, veuillez ne pas quitter le tableau de bord tant qu'elle n'est pas terminée.",
@@ -821,8 +821,8 @@
 	"resource.filter.clear": "Effacer les filtres",
 	"resource.filter.main-type": "Types principaux",
 	"resource.filtered-by": "Filtre par",
-	"resource.menu.annotate": "Annoter",
-	"resource.menu.classify": "Classer",
+	"resource.menu.annotate": "Annoter avec des NER",
+	"resource.menu.classify": "Annoter avec des étiquettes",
 	"resource.menu.edit": "Modifier",
 	"resource.menu.label": "Plus",
 	"resource.menu.summarize": "Résumer",
