[sc-8823] Extend ability to delete all resources

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -769,6 +769,8 @@
 	"resource.confirm-reprocess.title": "Esteu segur que voleu tornar a processar el recurs?",
 	"resource.confirm-summarize.description": "El resum resultant s'emmagatzemarà al recurs. Aquesta operació pot trigar fins a un minut, si us plau, no abandonis el dashboard fins que no s'hagi acabat.",
 	"resource.confirm-summarize.title": "Resumeix aquest recurs",
+	"resource.delete-all": "Suprimeix tots els {{count}} recursos",
+	"resource.delete-all-pending": "Suprimeix tots els {{count}} recursos pendents",
 	"resource.description.title": "Descripció",
 	"resource.empty": "No hi ha contingut al vostre Knowledge Box en aquest moment.",
 	"resource.empty_import": "Comenceu a utilitzar Nuclia a l'instant escollint un conjunt de dades de mostra. Aquesta és la manera més ràpida de començar i explorar com funciona Nuclia.",
@@ -840,7 +842,7 @@
 	"resource.preview.origin": "Origen",
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Recurs",
-	"resource.reindex-all-info": "S'ha iniciat el reprocessament de tots els recursos per error. Això pot trigar una mica.",
+	"resource.reindex-all-info": "S'ha iniciat el reprocessament de tots els recursos. Això pot trigar una mica.",
 	"resource.resource_page_number": "{{num}} per pàgina",
 	"resource.resources": "Recursos",
 	"resource.save-successful": "S'ha guardat el recurs",
