--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -770,6 +770,8 @@
 	"resource.confirm-reprocess.title": "Are you sure you want to reprocess the resource?",
 	"resource.confirm-summarize.description": "The resulting summary will be stored in the resource. This operation can take up to one minute, please don't leave the dashboard until it's done.",
 	"resource.confirm-summarize.title": "Summarize this resource",
+	"resource.delete-all": "Delete all {{count}} resources",
+	"resource.delete-all-pending": "Delete all {{count}} pending resources",
 	"resource.description.title": "Description",
 	"resource.empty": "There is no content in your Knowledge Box at the moment.",
 	"resource.empty_import": "Start using Nuclia instantly by picking a sample dataset. This is the fastest way to get started and explore how Nuclia works.",
@@ -841,7 +843,7 @@
 	"resource.preview.origin": "Origin",
 	"resource.processed_resources": "Processed resources",
 	"resource.profile": "Resource",
-	"resource.reindex-all-info": "Reprocessing all resources in error started. This may take some time.",
+	"resource.reindex-all-info": "Reprocessing all resources started. This may take some time.",
 	"resource.resource_page_number": "{{num}} per page",
 	"resource.resources": "Resources",
 	"resource.save-successful": "Resource saved",
