--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -770,6 +770,8 @@
 	"resource.confirm-reprocess.title": "Êtes-vous sûr de vouloir retraiter la ressource ?",
 	"resource.confirm-summarize.description": "Le résumé résultant sera stocké dans la ressource. Cette opération peut prendre jusqu'à une minute, veuillez ne pas quitter le tableau de bord tant qu'elle n'est pas terminée.",
 	"resource.confirm-summarize.title": "Résumer cette ressource",
+	"resource.delete-all": "Supprimer toutes les {{count}}  ressources",
+	"resource.delete-all-pending": "Supprimer toutes les {{count}}  ressources en attente",
 	"resource.description.title": "La description",
 	"resource.empty": "Il n'y a aucun contenu dans votre Knowledge Box pour le moment.",
 	"resource.empty_import": "Commencez à utiliser Nuclia instantanément en choisissant un exemple d'ensemble de données. C'est le moyen le plus rapide de commencer et d'explorer le fonctionnement de Nuclia.",
@@ -841,7 +843,7 @@
 	"resource.preview.origin": "Origine",
 	"resource.processed_resources": "Ressources traitées",
 	"resource.profile": "Ressource",
-	"resource.reindex-all-info": "Le retraitement de toutes les ressources erronées a commencé. Cela peut prendre un certain temps.",
+	"resource.reindex-all-info": "Le retraitement de toutes les ressources a commencé. Cela peut prendre un certain temps.",
 	"resource.resource_page_number": "{{num}} par page",
 	"resource.resources": "Ressources",
 	"resource.save-successful": "Ressource économisée",
