--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -769,6 +769,8 @@
 	"resource.confirm-reprocess.title": "¿Está seguro de que desea volver a procesar el recurso?",
 	"resource.confirm-summarize.description": "El resumen resultante se almacenará en el recurso. Esta operación puede tardar hasta un minuto, por favor, no abandones el dashboard hasta que finalice.",
 	"resource.confirm-summarize.title": "Resumir este recurso",
+	"resource.delete-all": "Eliminar todos los {{count}} recursos",
+	"resource.delete-all-pending": "Eliminar todos los {{count}} recursos pendientes",
 	"resource.description.title": "Descripción",
 	"resource.empty": "No hay contenido en su Knowledge Box en este momento.",
 	"resource.empty_import": "Comience a usar Nuclia al instante eligiendo un conjunto de datos de muestra. Esta es la forma más rápida de comenzar y explorar cómo funciona Nuclia.",
@@ -840,7 +842,7 @@
 	"resource.preview.origin": "Origen",
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Recurso",
-	"resource.reindex-all-info": "Se inició el reprocesamiento de todos los recursos por error. Esto puede tomar algo de tiempo.",
+	"resource.reindex-all-info": "Se inició el reprocesamiento de todos los recursos. Esto puede tomar algo de tiempo.",
 	"resource.resource_page_number": "{{num}} por página",
 	"resource.resources": "Recursos",
 	"resource.save-successful": "Recurso guardado",
