filters in sync

--- a/libs/sync/src/assets/i18n/ca.json
+++ b/libs/sync/src/assets/i18n/ca.json
@@ -41,6 +41,13 @@
 	"upload.connectors": "Connectors",
 	"upload.deletion-failed": "S'ha produït un error en la supressió",
 	"upload.failed": "Desa la fallada",
+	"upload.filters.exclude": "Excloure",
+	"upload.filters.exclude-help": "Exclourà les extensions de fitxer en lloc de seleccionar-les.",
+	"upload.filters.extensions": "Extensions de fitxers",
+	"upload.filters.extensions-placeholder": ".pdf,.docx",
+	"upload.filters.modified": "Data de modificació",
+	"upload.filters.modified-from": "Des de",
+	"upload.filters.modified-to": "A",
 	"upload.labels": "Apliqueu etiquetes als recursos penjats mitjançant aquest connector",
 	"upload.no-labels": "Si voleu assignar etiquetes quan pengeu fitxers, definiu alguns conjunts d'etiquetes al vostre tauler.",
 	"upload.refresh": "Actualització {{field}}",
