--- a/libs/sync/src/assets/i18n/en.json
+++ b/libs/sync/src/assets/i18n/en.json
@@ -41,6 +41,14 @@
 	"upload.connectors": "Connectors",
 	"upload.deletion-failed": "Deletion failed",
 	"upload.failed": "Save failure",
+	"upload.filters.exclude": "Exclude",
+	"upload.filters.exclude-help": "WIll exclude the file extensions rather than selecting them.",
+	"upload.filters.extensions": "File extensions",
+	"upload.filters.extensions-help": "Comma-separated list of file extensions",
+	"upload.filters.extensions-placeholder": ".pdf,.docx",
+	"upload.filters.modified": "Modification date",
+	"upload.filters.modified-from": "From",
+	"upload.filters.modified-to": "To",
 	"upload.labels": "Apply labels to resources uploaded through this connector",
 	"upload.no-labels": "If you want to assign labels when uploading files, define some labelsets in your dashboard.",
 	"upload.refresh": "Refresh {{field}}",
