--- a/libs/sync/src/assets/i18n/es.json
+++ b/libs/sync/src/assets/i18n/es.json
@@ -41,6 +41,13 @@
 	"upload.connectors": "Conectores",
 	"upload.deletion-failed": "Error al borrar",
 	"upload.failed": "Guardar fracaso",
+	"upload.filters.exclude": "Excluir",
+	"upload.filters.exclude-help": "Excluirá las extensiones de archivo en lugar de seleccionarlas.",
+	"upload.filters.extensions": "Extensiones de archivo",
+	"upload.filters.extensions-placeholder": ".pdf,.docx",
+	"upload.filters.modified": "Fecha de modificación",
+	"upload.filters.modified-from": "Desde",
+	"upload.filters.modified-to": "A",
 	"upload.labels": "Aplicar etiquetas a los recursos cargados a través de este conector",
 	"upload.no-labels": "Si desea asignar etiquetas al cargar archivos, defina algunos conjuntos de etiquetas en su panel.",
 	"upload.refresh": "Refrescar {{field}}",
