--- a/libs/sync/src/assets/i18n/fr.json
+++ b/libs/sync/src/assets/i18n/fr.json
@@ -41,6 +41,13 @@
 	"upload.connectors": "Connecteurs",
 	"upload.deletion-failed": "La suppression a échoué",
 	"upload.failed": "Échec de l'enregistrement",
+	"upload.filters.exclude": "Exclure",
+	"upload.filters.exclude-help": "Exclura les extensions de fichiers plutôt que de les sélectionner.",
+	"upload.filters.extensions": "Extensions de fichiers",
+	"upload.filters.extensions-placeholder": ".pdf,.docx",
+	"upload.filters.modified": "Date de modification",
+	"upload.filters.modified-from": "De",
+	"upload.filters.modified-to": "À",
 	"upload.labels": "Appliquer des étiquettes aux ressources téléchargées via ce connecteur",
 	"upload.no-labels": "Si vous souhaitez attribuer des étiquettes lors du téléchargement de fichiers, définissez des ensembles d'étiquettes dans votre tableau de bord.",
 	"upload.refresh": "Rafraîchir {{field}}",
