--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -637,7 +637,7 @@
 	"navbar.trainings": "Trainings",
 	"navbar.upload-data": "Upload data",
 	"navbar.users": "Users",
-	"navbar.widgets": "Widgets",
+	"navbar.widgets": "Search widget",
 	"need-help-book-demo": "Need help? Book a demo!",
 	"ner-add-entity-dialog.title": "Add NER",
 	"ner-family-dialog.family-color": "NER family color",
@@ -1135,7 +1135,7 @@
 	"widget.generator.advanced.selected-preset.edited": "(edited)",
 	"widget.generator.advanced.selected-preset.label": "Current preset:",
 	"widget.generator.configuration": "Widget configuration",
-	"widget.generator.page-title": "Widget configuration",
+	"widget.generator.page-title": "Search widget",
 	"widget.generator.presets.ask.long-description": "This is the modality made popular by ChatGPT, where the user asks a question and gets an answer. The system leverages the \"Find\" experience search results to build a consistent context that will be used by a large language model to generate the answer. The user can ask follow-up questions to get more information.",
 	"widget.generator.presets.ask.short-description": "Get an answer",
 	"widget.generator.presets.ask.title": "Ask",
