--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -636,7 +636,7 @@
 	"navbar.trainings": "Entrenamientos",
 	"navbar.upload-data": "Subir datos",
 	"navbar.users": "Usuarios",
-	"navbar.widgets": "Widgets",
+	"navbar.widgets": "Widget de búsqueda",
 	"need-help-book-demo": "¿Necesitas ayuda? ¡Reserve una demo!",
 	"ner-add-entity-dialog.title": "Añadir NER",
 	"ner-family-dialog.family-color": "Color de la familia NER",
@@ -1134,7 +1134,7 @@
 	"widget.generator.advanced.selected-preset.edited": "(editado)",
 	"widget.generator.advanced.selected-preset.label": "Preajuste actual:",
 	"widget.generator.configuration": "Configuracion de Widget",
-	"widget.generator.page-title": "Configuracion de Widget",
+	"widget.generator.page-title": "Widget de búsqueda",
 	"widget.generator.presets.ask.long-description": "Esta es la modalidad popularizada por ChatGPT, donde el usuario hace una pregunta y obtiene una respuesta. El sistema aprovecha los resultados de búsqueda de la experiencia \"Encontrar\" para crear un contexto coherente que será utilizado por un modelo de lenguaje grande para generar la respuesta. El usuario puede hacer preguntas de seguimiento para obtener más información.",
 	"widget.generator.presets.ask.short-description": "Obtener una respuesta",
 	"widget.generator.presets.ask.title": "Preguntar",
