[sc-9024] Pass a CSS selector when uploading links

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -602,7 +602,10 @@
 	"metrics.units.hours": "Hores",
 	"metrics.units.queries": "Consultes",
 	"metrics.units.tokens": "Tokens",
+	"modal.create_link.css-selector.label": "Selector CSS",
+	"modal.create_link.css-selector.placeholder": "Exemple: .main-container",
 	"modal.create_link.csv-file": "Enllaços d'un fitxer CSV",
+	"modal.create_link.csv-summary": "Es penjaran {{count}} enllaços",
 	"modal.create_link.link-to.file": "un fitxer en línia",
 	"modal.create_link.link-to.label": "Enllaç a:",
 	"modal.create_link.link-to.web-page": "una pàgina web",
@@ -1013,10 +1016,11 @@
 	"upload.check_files": "Comprova l'estat dels fitxers",
 	"upload.completed": "completat",
 	"upload.conflict": "Això és un duplicat. Descartat.",
+	"upload.csv_css_selector": "La columna <code>selector CSS</code> és obligatòria, però podeu mantenir-la buida si no la necessiteu.",
 	"upload.csv_description": "Creeu diversos recursos seleccionant un fitxer CSV amb 4 columnes: <code>Títol, Cos, Format, Etiquetes</code>",
 	"upload.csv_format": "La columna <code>Format</code> pot ser un d'aquests valors: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "La columna <code>Etiquetes</code>segueix aquest patró:\n<code>labelset1/label1|labelset2/label2...</code>",
-	"upload.csv_links_description": "Selecciona un arxiu CSV amb 2 columns: <code>Url, Etiquetes</code>",
+	"upload.csv_links_description": "Seleccioneu un fitxer CSV amb 3 columnes: <code>URL, etiquetes, selector CSS</code>",
 	"upload.error": "La càrrega ha fallat",
 	"upload.files": "Carregueu fitxers",
 	"upload.folder": "Carregueu una carpeta",
