--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -602,7 +602,10 @@
 	"metrics.units.hours": "Horas",
 	"metrics.units.queries": "Consultas",
 	"metrics.units.tokens": "Tokens",
+	"modal.create_link.css-selector.label": "Selector de CSS",
+	"modal.create_link.css-selector.placeholder": "Ejemplo: .main-container",
 	"modal.create_link.csv-file": "Enlaces desde un archivo CSV",
+	"modal.create_link.csv-summary": "Se cargarán {{count}} enlaces",
 	"modal.create_link.link-to.file": "un archivo en línea",
 	"modal.create_link.link-to.label": "Enlace a:",
 	"modal.create_link.link-to.web-page": "una página web",
@@ -1013,10 +1016,11 @@
 	"upload.check_files": "Comprueba el estado de los ficheros",
 	"upload.completed": "completado",
 	"upload.conflict": "Este es un duplicado. Descartado.",
+	"upload.csv_css_selector": "La columna <code>Selector CSS</code> es obligatoria, pero puedes mantenerla vacía si no la necesitas.",
 	"upload.csv_description": "Cree múltiples recursos seleccionando un archivo CSV con 4 columnas: <code>Título, Cuerpo, Formato, Etiquetas</code>",
 	"upload.csv_format": "La columna <code>Formato</code> puede ser uno de estos valores: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "La columna <code>Etiquetas</code>sigue este patrón:\n<code>labelset1/label1|labelset2/label2...</code>",
-	"upload.csv_links_description": "Selecciona un archivo CSV con 2 columnas: <code>Url, Etiquetas</code>",
+	"upload.csv_links_description": "Seleccione un archivo CSV con 3 columnas: <code>URL, etiquetas, selector de CSS</code>",
 	"upload.error": "Subida fallida",
 	"upload.files": "Subir archivos",
 	"upload.folder": "Subir una carpeta",
