--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -603,7 +603,10 @@
 	"metrics.units.hours": "Heures",
 	"metrics.units.queries": "Requêtes",
 	"metrics.units.tokens": "Tokens",
+	"modal.create_link.css-selector.label": "Sélecteur CSS",
+	"modal.create_link.css-selector.placeholder": "Exemple : .main-container",
 	"modal.create_link.csv-file": "Liens à partir d'un fichier CSV",
+	"modal.create_link.csv-summary": "{{count}} liens seront téléchargés",
 	"modal.create_link.link-to.file": "un fichier en ligne",
 	"modal.create_link.link-to.label": "Lien vers:",
 	"modal.create_link.link-to.web-page": "une page Web",
@@ -1014,10 +1017,11 @@
 	"upload.check_files": "Vérifier l'état des fichiers",
 	"upload.completed": "terminé",
 	"upload.conflict": "Il s'agit d'un doublon. Rejeté.",
+	"upload.csv_css_selector": " La colonne <code>sélecteur CSS</code> est obligatoire, mais vous pouvez la garder vide si vous n'en avez pas besoin.",
 	"upload.csv_description": "Créer des ressources multiples en sélectionnant un fichier CSV avec 4 colonnes : <code>Titre, Corps, Format, Etiquettes</code>",
 	"upload.csv_format": " La colonne <code>Format</code> doit être l'une de ces valeurs : <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": " La colonne<code>Étiquettes</code> suit ce modèle :\n<code>jeu d'étiquettes1/étiquette1|jeu d'étiquettes2/étiquette2...</code>",
-	"upload.csv_links_description": "Sélectionnez un fichier CSV avec 2 colonnes : <code>Url, Étiquettes</code>",
+	"upload.csv_links_description": "Sélectionnez un fichier CSV à trois colonnes : <code>Url, Libellés, Sélecteur CSS</code>",
 	"upload.error": "Échec du téléchargement",
 	"upload.files": "Téléchargement de fichiers",
 	"upload.folder": "Télécharger un dossier",
