--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -603,7 +603,10 @@
 	"metrics.units.hours": "Hours",
 	"metrics.units.queries": "Queries",
 	"metrics.units.tokens": "Tokens",
+	"modal.create_link.css-selector.label": "CSS selector",
+	"modal.create_link.css-selector.placeholder": "Example: .main-container",
 	"modal.create_link.csv-file": "Links from a CSV file",
+	"modal.create_link.csv-summary": "{{count}} links will be uploaded",
 	"modal.create_link.link-to.file": "an online file",
 	"modal.create_link.link-to.label": "Link to:",
 	"modal.create_link.link-to.web-page": "a web page",
@@ -1014,10 +1017,11 @@
 	"upload.check_files": "Check file status",
 	"upload.completed": "completed",
 	"upload.conflict": "This is a duplicate. Dismissed.",
+	"upload.csv_css_selector": "<code>CSS selector</code> column is mandatory, but you can keep it empty if you don't need it.",
 	"upload.csv_description": "Create multiple resources by selecting a CSV file with 4 columns: <code>Title, Body, Format, Labels</code>",
 	"upload.csv_format": "<code>Format</code> column must be one of these values: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "<code>Labels</code> column follows this pattern:\n<code>labelset1/label1|labelset2/label2...</code>",
-	"upload.csv_links_description": "Select a CSV file with 2 columns: <code>Url, Labels</code>",
+	"upload.csv_links_description": "Select a CSV file with 3 columns: <code>Url, Labels, CSS selector</code>",
 	"upload.error": "Upload failed",
 	"upload.files": "Upload files",
 	"upload.folder": "Upload a folder",
