disable citations for LLMs that does not support it

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -1079,8 +1079,9 @@
 	"widget.generator.advanced.display-category.title": "Mostrar",
 	"widget.generator.advanced.generative-answer-category.answers.help": "Generar respuesta a las preguntas de los usuarios y permitir chatear con el sistema",
 	"widget.generator.advanced.generative-answer-category.answers.label": "Generación de respuesta",
-	"widget.generator.advanced.generative-answer-category.citations.help": "Muestre qué fuentes se han utilizado para generar la respuesta.",
+	"widget.generator.advanced.generative-answer-category.citations.help": "Muestre qué fuentes se han utilizado para generar la respuesta. Actualmente, esta característica no es compatible con todos los modelos generativos.",
 	"widget.generator.advanced.generative-answer-category.citations.label": "Citas",
+	"widget.generator.advanced.generative-answer-category.generative-model.default": "Valor predeterminado actual",
 	"widget.generator.advanced.generative-answer-category.generative-model.help": "Utilice un modelo generativo diferente al predeterminado definido en la configuración AI del Knowledge Box",
 	"widget.generator.advanced.generative-answer-category.generative-model.label": "Modelo generativo específico",
 	"widget.generator.advanced.generative-answer-category.hide-results.help": "Ocultar los resultados de la búsqueda",
