--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -1080,8 +1080,9 @@
 	"widget.generator.advanced.display-category.title": "Affichage",
 	"widget.generator.advanced.generative-answer-category.answers.help": "Générer une réponse aux questions de l'utilisateur et permettre de discuter avec le système",
 	"widget.generator.advanced.generative-answer-category.answers.label": "Génération de réponses",
-	"widget.generator.advanced.generative-answer-category.citations.help": "Montre quelles sources ont été utilisées pour générer la réponse.",
+	"widget.generator.advanced.generative-answer-category.citations.help": "Affiche quelles sources ont été utilisées pour générer la réponse. Cette fonctionnalité n'est actuellement pas prise en charge par tous les modèles génératifs.",
 	"widget.generator.advanced.generative-answer-category.citations.label": "Citations",
+	"widget.generator.advanced.generative-answer-category.generative-model.default": "Valeur par défaut actuelle",
 	"widget.generator.advanced.generative-answer-category.generative-model.help": "Utiliser un modèle génératif différent de celui par défaut défini dans les paramètres AI de la Knowledge Box",
 	"widget.generator.advanced.generative-answer-category.generative-model.label": "Modèle génératif spécifique",
 	"widget.generator.advanced.generative-answer-category.hide-results.help": "Masquer les résultats de la recherche",
