--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -1079,8 +1079,9 @@
 	"widget.generator.advanced.display-category.title": "Mostra",
 	"widget.generator.advanced.generative-answer-category.answers.help": "Genera resposta a les preguntes dels usuaris i permet xatejar amb el sistema",
 	"widget.generator.advanced.generative-answer-category.answers.label": "Generació de respostes",
-	"widget.generator.advanced.generative-answer-category.citations.help": "Mostra quines fonts s'han utilitzat per generar la resposta.",
+	"widget.generator.advanced.generative-answer-category.citations.help": "Mostra quines fonts s'han utilitzat per generar la resposta. Aquesta funció actualment no és compatible amb tots els models generatius.",
 	"widget.generator.advanced.generative-answer-category.citations.label": "Citacions",
+	"widget.generator.advanced.generative-answer-category.generative-model.default": "Per defecte actual",
 	"widget.generator.advanced.generative-answer-category.generative-model.help": "Utilitzeu un model generatiu diferent del que s'ha definit per defecte a la configuració IA del Knowledge Box",
 	"widget.generator.advanced.generative-answer-category.generative-model.label": "Model generatiu específic",
 	"widget.generator.advanced.generative-answer-category.hide-results.help": "Amagar els resultats de la cerca",
