--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -1080,8 +1080,9 @@
 	"widget.generator.advanced.display-category.title": "Display",
 	"widget.generator.advanced.generative-answer-category.answers.help": "Generate a response to the user's questions and allow to chat with the system",
 	"widget.generator.advanced.generative-answer-category.answers.label": "Answer generation",
-	"widget.generator.advanced.generative-answer-category.citations.help": "Show which sources have been used to generate the answer.",
+	"widget.generator.advanced.generative-answer-category.citations.help": "Show which sources have been used to generate the answer. This feature is currently not supported by all the generative models.",
 	"widget.generator.advanced.generative-answer-category.citations.label": "Citations",
+	"widget.generator.advanced.generative-answer-category.generative-model.default": "Current default",
 	"widget.generator.advanced.generative-answer-category.generative-model.help": "Use a different generative model than the default one defined in the Knowledge Box AI settings",
 	"widget.generator.advanced.generative-answer-category.generative-model.label": "Specific generative model",
 	"widget.generator.advanced.generative-answer-category.hide-results.help": "Hide the search results",
