[sc-9179] Allow to set language at upload

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -1027,6 +1027,9 @@
 	"upload.invalid_csv": "L'arxiu CSV no és vàlid",
 	"upload.invalid_image": "El fitxer seleccionat no és una imatge vàlida",
 	"upload.labels_number": "{{num}} etiquetes",
+	"upload.language-detection.checkbox-label": "Deixa que Nuclia detecti automàticament l'idioma",
+	"upload.language-detection.input-help": "Utilitzeu l'idioma especificat quan processeu els fitxers penjats",
+	"upload.language-detection.input-label": "Codi d'idioma (format ISO de 2 lletres)",
 	"upload.link": "Afegeix enllaços",
 	"upload.once_uploaded": "Un cop penjats, podeu veure l'estat dels vostres fitxers a la pàgina Recursos pendents. Quan es processin els fitxers, apareixeran a la llista de Recursos.",
 	"upload.progress-dialog-title": "Cua de pujades",
@@ -1035,6 +1038,7 @@
 	"upload.qna_csv_preview.answer": "Resposta",
 	"upload.qna_csv_preview.question": "Pregunta",
 	"upload.question_format": "Format de pregunta",
+	"upload.remove-file": "Elimina el fitxer",
 	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
