--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -1028,6 +1028,9 @@
 	"upload.invalid_csv": "Invalid CSV file",
 	"upload.invalid_image": "Selected file is not a valid image",
 	"upload.labels_number": "{{num}} labels",
+	"upload.language-detection.checkbox-label": "Let Nuclia automatically detect the language",
+	"upload.language-detection.input-help": "Use specified language when processing the files uploaded",
+	"upload.language-detection.input-label": "Language code (2 letters ISO format)",
 	"upload.link": "Add links",
 	"upload.once_uploaded": "Once uploaded, you can see the status of your files in the Pending resources page. When the files are processed, they will show up in the Resources list.",
 	"upload.progress-dialog-title": "Upload queue",
@@ -1036,6 +1039,7 @@
 	"upload.qna_csv_preview.answer": "Answer",
 	"upload.qna_csv_preview.question": "Question",
 	"upload.question_format": "Question format",
+	"upload.remove-file": "Remove file",
 	"upload.select_csv": "Select CSV",
 	"upload.select_file": "Drop your file(s) or click here",
 	"upload.size_warning_1": "Media files can not exceed {{ maxMedia }} and non-media files {{ max }}.",
