--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -1028,6 +1028,9 @@
 	"upload.invalid_csv": "Fichier CSV non valide",
 	"upload.invalid_image": "Le fichier sélectionné n'est pas une image valide",
 	"upload.labels_number": "{{num}} étiquettes",
+	"upload.language-detection.checkbox-label": "Laissez Nuclia détecter automatiquement la langue",
+	"upload.language-detection.input-help": "Utiliser la langue spécifiée lors du traitement des fichiers téléchargés",
+	"upload.language-detection.input-label": "Code langue (format ISO 2 lettres)",
 	"upload.link": "Ajouter des liens",
 	"upload.once_uploaded": "Une fois téléchargés, vous pouvez voir l'état de vos fichiers dans la page Ressources en attente. Lorsque les fichiers seront traités, ils apparaîtront dans la liste des ressources.",
 	"upload.progress-dialog-title": "File d'attente de téléchargement",
@@ -1036,6 +1039,7 @@
 	"upload.qna_csv_preview.answer": "Réponse",
 	"upload.qna_csv_preview.question": "Question",
 	"upload.question_format": "Format des questions",
+	"upload.remove-file": "Supprimer le fichier",
 	"upload.select_csv": "Sélectionner CSV",
 	"upload.select_file": "Déposez votre (vos) fichier(s) ou cliquez ici",
 	"upload.size_warning_1": "Les fichiers multimédias ne peuvent dépasser {{ maxMedia }} et les fichiers non multimédias {{ max }}.",
