--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -1027,6 +1027,9 @@
 	"upload.invalid_csv": "El archivo CSV no es válido",
 	"upload.invalid_image": "El archivo seleccionad no es una imagen válida",
 	"upload.labels_number": "{{num}} etiquetas",
+	"upload.language-detection.checkbox-label": "Deja que Nuclia detecte automáticamente el idioma",
+	"upload.language-detection.input-help": "Utilice el lenguaje especificado al procesar los archivos cargados",
+	"upload.language-detection.input-label": "Código de idioma (formato ISO de 2 letras)",
 	"upload.link": "Agregar enlaces",
 	"upload.once_uploaded": "Una vez cargados, puede ver el estado de sus archivos en la página de recursos pendientes. Cuando se procesen los archivos, aparecerán en la lista de Recursos.",
 	"upload.progress-dialog-title": "Cola de subidas",
@@ -1035,6 +1038,7 @@
 	"upload.qna_csv_preview.answer": "Responder",
 	"upload.qna_csv_preview.question": "Pregunta",
 	"upload.question_format": "Formato de pregunta",
+	"upload.remove-file": "Remover archivo",
 	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
