[sc-8741] Allow to activate or deactivate a sync

--- a/libs/sync/src/assets/i18n/ca.json
+++ b/libs/sync/src/assets/i18n/ca.json
@@ -29,6 +29,7 @@
 	"pastanaga.datetime.minutesAgo": "Fa {{minutes}} minuts",
 	"pastanaga.datetime.one-minute-ago": "Fa 1 min",
 	"pastanaga.datetime.yesterday": "Ahir",
+	"upload.active": "Actiu",
 	"upload.activity.date": "Data",
 	"upload.activity.error": "La sincronització ha fallat",
 	"upload.activity.event": "Missatge",
