--- a/libs/sync/src/assets/i18n/fr.json
+++ b/libs/sync/src/assets/i18n/fr.json
@@ -29,6 +29,7 @@
 	"pastanaga.datetime.minutesAgo": "Il y a {{minutes}} minutes",
 	"pastanaga.datetime.one-minute-ago": "Il y a 1 minute",
 	"pastanaga.datetime.yesterday": "Hier",
+	"upload.active": "Actif",
 	"upload.activity.date": "Date",
 	"upload.activity.error": "Échec de la synchronisation",
 	"upload.activity.event": "Message",
