support css selector on sitemap

--- a/libs/sync/src/assets/i18n/es.json
+++ b/libs/sync/src/assets/i18n/es.json
@@ -8,6 +8,13 @@
 	"action.save": "Guardar",
 	"action.switch_account": "Cambia de cuenta",
 	"action.upload": "Subir",
+	"connectors.confluence.token.label": "Token de API",
+	"connectors.confluence.url.label": "URL del sitio de Confluence",
+	"connectors.confluence.user.label": "Cuenta de usuario",
+	"connectors.sharepoint.site.label": "Nombre del sitio",
+	"connectors.sitemap.selector.help": "Restringirá la indexación al contenido de texto correspondiente a este selector CSS.",
+	"connectors.sitemap.selector.label": "Selector de CSS",
+	"connectors.sitemap.url.label": "URL del sitemap",
 	"history.clear": "Borrar historial",
 	"history.data": "Datos",
 	"history.date": "Fecha",
