--- a/libs/sync/src/assets/i18n/fr.json
+++ b/libs/sync/src/assets/i18n/fr.json
@@ -8,6 +8,13 @@
 	"action.save": "Enregistrer",
 	"action.switch_account": "Changer de compte",
 	"action.upload": "Télécharger",
+	"connectors.confluence.token.label": "Jeton d'API",
+	"connectors.confluence.url.label": "URL du site Confluence",
+	"connectors.confluence.user.label": "Compte d'utilisateur",
+	"connectors.sharepoint.site.label": "Nom du site",
+	"connectors.sitemap.selector.help": "Limitera l'indexation au contenu texte correspondant à ce sélecteur CSS.",
+	"connectors.sitemap.selector.label": "Sélecteur CSS",
+	"connectors.sitemap.url.label": "URL du sitemap",
 	"history.clear": "Effacer l'historique",
 	"history.data": "Données",
 	"history.date": "Date",
