--- a/libs/sync/src/assets/i18n/ca.json
+++ b/libs/sync/src/assets/i18n/ca.json
@@ -8,6 +8,13 @@
 	"action.save": "Desar",
 	"action.switch_account": "Canviar de compte",
 	"action.upload": "Pujar",
+	"connectors.confluence.token.label": "Token d'API",
+	"connectors.confluence.url.label": "URL del lloc de Confluence",
+	"connectors.confluence.user.label": "Compte d'usuari",
+	"connectors.sharepoint.site.label": "Nom del lloc",
+	"connectors.sitemap.selector.help": "Restringirà la indexació al contingut de text corresponent a aquest selector CSS.",
+	"connectors.sitemap.selector.label": "Selector CSS",
+	"connectors.sitemap.url.label": "URL del sitemap",
 	"history.clear": "Netjar historial",
 	"history.data": "Dades",
 	"history.date": "Data",
