--- a/libs/sync/src/assets/i18n/en.json
+++ b/libs/sync/src/assets/i18n/en.json
@@ -8,6 +8,13 @@
 	"action.save": "Save",
 	"action.switch_account": "Switch account",
 	"action.upload": "Upload",
+	"connectors.confluence.token.label": "API token",
+	"connectors.confluence.url.label": "Confluence site URL",
+	"connectors.confluence.user.label": "User account",
+	"connectors.sharepoint.site.label": "Site name",
+	"connectors.sitemap.selector.help": "Will restrict the indexation to the text content corresponding to this CSS selector.",
+	"connectors.sitemap.selector.label": "CSS selector",
+	"connectors.sitemap.url.label": "Sitemap URL",
 	"history.clear": "Clear history",
 	"history.data": "Data",
 	"history.date": "Date",
