--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -511,6 +511,7 @@
 	"kb.create.in_progress": "Knowledge Box creation in progress…",
 	"kb.create.invalid_name": "Invalid Knowledge Box name",
 	"kb.create.title": "Create a Knowledge Box",
+	"kb.form.existing-name": "This Knowledge Box name already exists in the account.",
 	"kb.form.invalid-slug": "Invalid Knowledge Box slug",
 	"kb.form.name": "Knowledge Box name",
 	"kb.form.required-name": "Required field",
