--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -510,6 +510,7 @@
 	"kb.create.in_progress": "Creación de la Knowledge Box en curso...",
 	"kb.create.invalid_name": "El nombre de la Knowledge Box no es válido",
 	"kb.create.title": "Crea una Knowledge Box",
+	"kb.form.existing-name": "Este nombre de Knowledge Box ya existe en la cuenta.",
 	"kb.form.invalid-slug": "El Knowledge Box slug no es válido",
 	"kb.form.name": "Nombre de la Knowledge Box",
 	"kb.form.required-name": "Campo requerido",
