--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -511,6 +511,7 @@
 	"kb.create.in_progress": "Création de la Knowledge Box en cours…",
 	"kb.create.invalid_name": "Nom de la Knowledge Box invalide",
 	"kb.create.title": "Créer une Knowledge Box",
+	"kb.form.existing-name": "Ce nom de Knowledge Box existe déjà dans le compte.",
 	"kb.form.invalid-slug": "Knowledge Box slug invalide",
 	"kb.form.name": "Nom de la Knowledge Box",
 	"kb.form.required-name": "Champs requis",
